testdata/baselines/reference/submodule/compiler/jsExportMemberMergedWithModuleAugmentation2.errors.txt
/index.ts(1,19): error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'allowSyntheticDefaultImports' flag and referencing its default export.
/index.ts(3,16): error TS2671: Cannot augment module './test' because it resolves to a non-module entity.
/index.ts(7,3): error TS2551: Property 'toFixed' does not exist on type 'string'. Did you mean 'fixed'?
/test.js(1,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== /test.js (1 errors) ====
    module.exports = {
    ~~~~~~~~~~~~~~~~~~
      a: "ok"
    ~~~~~~~~~
    };
    ~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    
==== /index.ts (3 errors) ====
    import { a } from "./test";
                      ~~~~~~~~
!!! error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'allowSyntheticDefaultImports' flag and referencing its default export.
    
    declare module "./test" {
                   ~~~~~~~~
!!! error TS2671: Cannot augment module './test' because it resolves to a non-module entity.
      export const a: number;
    }
    
    a.toFixed();
      ~~~~~~~
!!! error TS2551: Property 'toFixed' does not exist on type 'string'. Did you mean 'fixed'?
!!! related TS2728 lib.es2015.core.d.ts:--:--: 'fixed' is declared here.
    